@@ -39,6 +39,7 @@ import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
+import static org.junit.Assume.assumeTrue;
 
 import android.Manifest;
 import android.content.ContentInterface;
@@ -333,9 +334,22 @@ public class MediaProviderTest {
      */
     @Test
     public void testCreateRequest() throws Exception {
-        final Collection<Uri> uris = Arrays.asList(
-                MediaStore.Images.Media.getContentUri(MediaStore.VOLUME_EXTERNAL_PRIMARY, 42));
+        final ContentValues values = new ContentValues();
+        values.put(MediaColumns.DISPLAY_NAME, "test.mp3");
+        values.put(MediaColumns.MIME_TYPE, "audio/mpeg");
+        final Uri uri = sIsolatedResolver.insert(
+                MediaStore.Audio.Media.getContentUri(MediaStore.VOLUME_EXTERNAL_PRIMARY), values);
+        assumeTrue(uri != null);
+        final Collection<Uri> uris = List.of(uri);
         assertNotNull(MediaStore.createWriteRequest(sIsolatedResolver, uris));
+    }
+
+    @Test
+    public void testCreateRequest_invalidUri_throwsException() throws Exception {
+        final Collection<Uri> uris = List.of(
+                MediaStore.Images.Media.getContentUri(MediaStore.VOLUME_EXTERNAL_PRIMARY, 42));
+        assertThrows(IllegalArgumentException.class,
+                () -> MediaStore.createWriteRequest(sIsolatedResolver, uris));
     }
 
     @Test
@@ -921,12 +935,23 @@ public class MediaProviderTest {
     }
 
     @Test
-    public void testBuildData_InvalidNames() throws Exception {
+    @RequiresFlagsEnabled({Flags.FLAG_ENABLE_TRASH_AND_RESTORE_BY_FILE_PATH_API})
+    public void testBuildData_withInvalidNames_preservesLeadingDotInFileName() throws Exception {
         final Uri uri = MediaStore.Images.Media.getContentUri(MediaStore.VOLUME_EXTERNAL_PRIMARY);
         assertEndsWith("/Pictures/foo_bar.png",
             buildFile(uri, null, "foo/bar", "image/png"));
         assertEndsWith("/Pictures/.hidden.png",
             buildFile(uri, null, ".hidden", "image/png"));
+    }
+
+    @Test
+    @RequiresFlagsDisabled({Flags.FLAG_ENABLE_TRASH_AND_RESTORE_BY_FILE_PATH_API})
+    public void testBuildData_withInvalidNames_replacesLeadingDotInFileName() throws Exception {
+        final Uri uri = MediaStore.Images.Media.getContentUri(MediaStore.VOLUME_EXTERNAL_PRIMARY);
+        assertEndsWith("/Pictures/foo_bar.png",
+                buildFile(uri, null, "foo/bar", "image/png"));
+        assertEndsWith("/Pictures/_.hidden.png",
+                buildFile(uri, null, ".hidden", "image/png"));
     }
 
     @Test
